# crypto-intel-bot

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/crypto_intel/: __init__.py  bot.py  cli.py  config.py  db.py
src/crypto_intel/agents/: __init__.py  market_data_agent.py  orchestrator.py  report_agent.py  sentiment_agent.py  state.py  technical_agent.py
src/crypto_intel/alerts/: __init__.py  models.py  monitor.py
src/crypto_intel/dashboard/: app.py
src/crypto_intel/dashboard/static/: index.html
src/crypto_intel/data/: __init__.py  coingecko.py  indicators.py  news.py
src/crypto_intel/llm/: __init__.py  factory.py  groq_provider.py  provider.py  template_provider.py
src/crypto_intel/rag/: __init__.py  embeddings.py  retriever.py  store.py
tests/: conftest.py  test_agents.py  test_alerts.py  test_cli.py  test_coingecko.py  test_db.py  test_indicators.py  test_llm.py  test_news.py  test_rag.py
